# raw-disk-image-installer

./: .gitignore  LICENSE.MIT  README.md  meson.build
.github/workflows/: ci-opensuse.yml
images/: mkosi.conf  mkosi.postinst  mkosi.postoutput
images/mkosi.extra/usr/lib/systemd/system-preset/: 60-raw-image-installer.preset
images/mkosi.images/rdii/: mkosi.conf
images/scripts/: add_extra_partition.sh  create_uefi_usbstick.sh
man/: ifcfg-networkd.8.xml  keywait.1.xml  meson.build
scripts/: keymap.sh  rdi-installer.sh.in  rdii-ssh-setup.sh  select_image.sh  target_device.sh
src/: ifcfg-networkd.c  keywait.c
tests/: meson.build
units/: meson.build  rdii-ssh-setup.service
